...
    <string name="edit_card_set_type_remove_images_title">Bilder entfernen</string>
    <string name="edit_card_set_type_remove_images_message">Bilder sind bei diesem Kartentyp nicht möglich. Sollen die vorhandenen Bilder entfernt werden?</string>
    <string name="card_type_standard">Standard</string>
    <string name="card_type_cloze_text">Lückentext</string>
    <string name="card_type_strict">Strenge Abfrage</string>

    <string name="confirm_dialog_confirm_default">OK</string>
    <string name="confirm_dialog_cancel_default">Abbrechen</string>

    <string name="delete_box_confirm_dialog_title">Box löschen</string>
    <string name="delete_box_confirm_dialog_message">Wollen Sie diese Box wirklich löschen?</string>
    <string name="delete_box_error_occurred">Fehler: Box konnte nicht gelöscht werden</string>

    <string name="box_title">box_title</string>
...
